# forum

./: .env.example  .gitignore  AI_USAGE.md  GRANT.md  README.md  SUBMISSION.md  foundry.toml
adapters/: README.md  package-lock.json  package.json  tsconfig.json
deploy/: README.md  forum-agora-mind.service  forum-fee-reconcile.service  forum-fee-reconcile.timer  forum-idle-policy.service  forum-idle-policy.timer  forum-indexer.service  forum-keeper.service  forum-stale-enforcer.service  forum-stale-enforcer.timer  nginx-forum.gudman.xyz.conf  proof.json
deployments/: arc-testnet.json
docs/: STATUS.md  architecture.md  backtest-notes.md  company-roadmap.md  demo-script.md  multibillion-plan.md  operator-onboarding.md  phase-2-real-fill-spec.md  phase-3-live-fill-proof.md  pitch-deck.md  security-roles.md  x-post.md  yield-adapter.md
frontend/: index.html  package-lock.json  package.json  site.webmanifest  tailwind.config.js
keeper/: package-lock.json  package.json  tsconfig.json
script/: Deploy.s.sol
scripts/: deploy.mjs  deploy.sh  pull-historical.py  test.sh  update-after-deploy.mjs
sdk-py/: README.md  pyproject.toml
sdk-py/src/forum_arc/: __init__.py  abi.py  client.py  deployments.py  indexer.py
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
src/: AgentPool.sol  BuilderCodeRegistry.sol  CapitalRouter.sol  CovenantInbox.sol  CovenantVault.sol  CovenantVaultFactory.sol  CovenantVaultFactoryV2.sol  CovenantVaultV2.sol  CovenantVaultV3.sol  FeeDistributor.sol  FeeRouterV1.sol  IStrategyAdapter.sol  IdleStrategyAdapter.sol  (+10 more)
(+129 files in other folders)
