[project]
name = "forum-arc"
version = "0.0.1"
description = "Arc-native SDK for prediction-market bot operators"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ridwan Nurudeen"}]
keywords = ["arc", "polymarket", "prediction-markets", "market-maker", "usdc"]
dependencies = [
    "web3>=7.0.0",
    "eth-account>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forum_arc"]
